# tinaa-playwright-msp

./: .env.example  .gitignore  .isort.cfg  .nojekyll  .pre-commit-config.yaml  CI_ANALYSIS.md  CLAUDE.md  Dockerfile  Dockerfile.vault-fix  GITHUB_PAGES_SETUP.md  LICENSE  MCP_IMPROVEMENTS.md  Makefile  README.md  README_HTTP.md  SECURITY.md  TECHNICAL_DEBT_FIXES.md  TESTING_GUIDE.md  TEST_ANTHROPIC_INTEGRATION.md  WORKFLOW_FIXES.md  alembic.ini  apply-ai-integration-helm.sh  apply-ai-integration.sh  apply_vault_fix.sh  configure_anthropic.py  deploy-ai-integration.sh  deploy-ai-simple.sh  deploy-and-test-ai.sh  deployment-no-vault.yaml  docker-compose.dev.yml  docker-compose.http.yml  docker-compose.prod.yml  docker-compose.yml  fix_broken_links.py  install-mkdocs.sh  mcp_handler.py  minimalist_mcp.py  mkdocs.yml  patch-http-server-v2.sh  patch-http-server.sh  (+18 more)
alembic/: env.py
app/: __init__.py  ai_enhanced_handler.py  ai_integration.py  ai_integration_simple.py  enhanced_mcp_handler.py  git_auth.py  http_server.py  main.py  mcp_handler.py  progress_tracker.py  secrets_manager.py  settings_api.py  tinaa_mcp_server.py  workspace_manager.py  workspace_mcp_tools.py
docs/: API.md  API_AUDIT_REPORT.md  API_OLD.md  ARCHITECTURE.md  DEPLOYMENT.md  DEVELOPER_GUIDE.md  DEVELOPMENT.md  DOCKER_IMAGE.md  ENHANCED_ARCHITECTURE.md  ENHANCED_DEPLOYMENT.md  ENTERPRISE_GUIDE.md  GITHUB_API_RESEARCH.md  INDEX.md  INTEGRATION_REPORT.md  MCP_TOOLS_REFERENCE.md  PRODUCT_DEFINITION.md  QUICK_START.md  README.md  RESOURCES.md  TESTING_GUIDE.md  TROUBLESHOOTING.md  USER_GUIDE.md  _config.yml  api.md  architecture.md  deployment.md  documentation-index.md  index.md  tags.md
examples/: example_test.py  ide_integration.html  test_missing_await.py
k8s/: configmap.yaml  deployment.yaml  ingress.yaml  namespace.yaml  postgres.yaml  redis.yaml  secret.yaml
memory/: MEMORY.md  project_tinaa_msp.md  user_aj_geddes.md
playwright_controller/: __init__.py  controller.py
playwright_lsp/: __init__.py  document_store.py  server.py
prompts/: __init__.py  authentication_prompts.py  collaborative_prompts.py  system_message.py  testing_prompts.py
resources/: README.md  __init__.py  accessibility_guidelines.json  heuristics.json  index.json  resource.json  resource_loader.py  test_patterns.json  testing_strategies.json
scripts/: build.sh  (+6 more)
(+258 files in other folders)
